[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vnbrokers"
version = "0.1.0"
description = "Multi-broker SDK for Vietnamese securities companies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "VNBrokers" }
]
dependencies = [
  "httpx>=0.27",
  "msgpack>=1.1",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "build>=1.2",
  "twine>=5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vnbrokers"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
markers = [
  "live: tests against real brokers",
  "integration: tests against local fake broker servers",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
